--- a/action.yml
+++ b/action.yml
@@ -7,6 +7,10 @@ inputs:
   linear-api-key:
     description: Linear API key
     required: true
+  github-token:
+    description: GitHub Token
+    required: true
+    default: ${{ github.token }}
 outputs:
   linear-id:
     description: 'Linear Issue ID'
