--- a/package.json
+++ b/package.json
@@ -4,11 +4,23 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "build": "tsc --build"
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
+    "build": "ncc build src/index.ts --license licenses.txt"
   },
   "author": "Rijk van Zanten <rijkvanzanten@me.com>",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "4.9.3"
+    "@types/node": "18.11.9",
+    "@vercel/ncc": "0.34.0",
+    "@vitest/coverage-c8": "0.25.3",
+    "rome": "10.0.1",
+    "typescript": "4.9.3",
+    "vitest": "0.25.3"
+  },
+  "dependencies": {
+    "@actions/core": "1.10.0",
+    "@actions/github": "5.1.1",
+    "@linear/sdk": "1.22.0"
   }
 }
